chore(CHANGELOG.md): update changelog for ZaDark version 24.4.3 with new features and fixes chore(package.json): update version to 24.4.3 in package.json style(_zadark-prv.scss): refactor opacity values using variables for consistency and readability feat(_zadark-prv.scss): add mixins for thread chat messages and improve styling for better user experience
style(zadark.scss): update colors and comments for better readability and consistency
style(zadark.scss): adjust brightness filter for message reaction icons
style(zadark.scss): update styles for media viewer and reaction emoji list
style(zadark.js): update element selectors and intro messages for tutorial steps
chore(package.json): bump version to 12.11

refactor(utils.js): update selectors in intro steps for better clarity and consistency
chore(manifest.json): bump version to 9.28 for Chrome, Edge, Firefox, Opera, and Safari extensions

--- a/src/core/scss/_zadark-prv.scss
+++ b/src/core/scss/_zadark-prv.scss
@@ -50,27 +50,29 @@
 }
 
 @mixin prv-thread-chat-message {
+  $opacity: 0;
+
   .chat-message:not(.multi-select-mode) {
     .card:not(.card--oa):not(.card--sticker):not(.card--group-photo),
     .call-msg {
       > *:not(.zadark-translate-msg__button) {
-        opacity: 0.1;
+        opacity: #{$opacity};
         transition: opacity 100ms ease-in-out;
       }
     }
 
     .img-msg-v2 .image-box__image {
-      opacity: 0;
+      opacity: #{$opacity};
       transition: opacity 100ms ease-in-out;
     }
 
     .img-msg-v2 .img-msg-v2__ft {
-      opacity: 0.1;
+      opacity: #{$opacity};
       transition: opacity 100ms ease-in-out;
     }
 
     .card--sticker .card--group-sticker__row__item {
-      opacity: 0.5;
+      opacity: 0.1;
       filter: var(--prv-sticker-filter);
       transition:
         opacity 100ms ease-in-out,
@@ -78,7 +80,7 @@
     }
 
     .card--group-photo .card--group-photo__row__item .image-box__image {
-      opacity: 0;
+      opacity: #{$opacity};
       transition: opacity 100ms ease-in-out;
     }
   }
@@ -89,14 +91,14 @@
   .e2ee-event-info,
   .reminder-info-v2 {
     > * {
-      opacity: 0.1;
+      opacity: #{$opacity};
       transition: opacity 100ms ease-in-out;
     }
   }
 
   // Pin message
   .chat-group-topic__item .info-container > .content-container {
-    opacity: 0.1;
+    opacity: #{$opacity};
     transition: opacity 100ms ease-in-out;
   }
 
@@ -150,12 +152,36 @@
   .chat-input-container--audit-2023 .chat-input-content {
     #richInput,
     .rich-text-input {
-      opacity: 0.1;
+      opacity: #{$opacity};
       transition: opacity 100ms ease-in-out;
 
       &:hover {
         opacity: 1;
       }
+    }
+  }
+}
+
+@mixin prv-thread-chat-message-v2 {
+  .chat-group-topic-outer,
+  #messageViewContainer {
+    opacity: 0;
+    transition: opacity 100ms ease-in-out;
+  }
+
+  #messageView:hover {
+    .chat-group-topic-outer,
+    #messageViewContainer {
+      opacity: 1;
+    }
+  }
+
+  .chat-input-container--audit-2023__left-layout {
+    opacity: 0;
+    transition: opacity 100ms ease-in-out;
+
+    &:hover {
+      opacity: 1;
     }
   }
 }
